# leta

./: .#TODO.md  .gitignore  Cargo.toml  Dockerfile.test  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RUST_LSP_SERVERS_RESEARCH.md  TEST_COVERAGE.md  emacs-bound-lsp-commands.txt  emacs-lsp-commands.txt  pyrightconfig.json  pytest.ini  setup.py  split_lsp_spec.py  test-leta-prompt.el  test-lspcmd-prompt.el  tool_selection_rules.md
.beads/: issues.jsonl
crates/leta-config/: Cargo.toml
crates/leta-config/src/: config.rs  paths.rs
crates/leta-lib/: Cargo.toml
crates/leta-lib/src/: lib.rs
crates/leta-lsp/: Cargo.toml
crates/leta-lsp/src/: capabilities.rs  client.rs  lib.rs  types.rs
crates/leta-output/: Cargo.toml
crates/leta-output/src/: formatters.rs  lib.rs
leta/: cache.py  cli.py  daemon_cli.py
lsp-spec/: 01-base-protocol.txt  02-language-server-protocol.txt  03-basic-json-structures.txt  04-work-done-progress.txt  05-partial-result-progress.txt  06-trace-value.txt  07-server-lifecycle.txt  08-initialize-request.txt  09-initialized-notification.txt  10-register-capability.txt  11-unregister-capability.txt  12-set-trace-notification.txt  13-log-trace-notification.txt  14-shutdown-request.txt  15-exit-notification.txt  16-text-document-synchronization.txt  17-did-open-text-document-notification.txt  18-did-change-text-document-notification.txt  19-will-save-text-document-notification.txt  20-will-save-wait-until-text-document-request.txt  21-did-save-text-document-notification.txt  22-did-close-text-document-notification.txt  23-notebook-document-synchronization.txt  24-did-open-notebook-document-notification.txt  25-did-change-notebook-document-notification.txt  26-did-save-notebook-document-notification.txt  27-did-close-notebook-document-notification.txt  28-language-features.txt  29-goto-declaration-request.txt  30-goto-definition-request.txt  31-goto-type-definition-request.txt  32-goto-implementation-request.txt  33-find-references-request.txt  34-prepare-call-hierarchy-request.txt  35-call-hierarchy-incoming-calls.txt  36-call-hierarchy-outgoing-calls.txt  37-prepare-type-hierarchy-request.txt  (+62 more)
(+746 files in other folders)
