[package]
name = "leta-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "This is an internal component crate of leta"
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
libc = "0.2"
thiserror = { workspace = true }
