[package]
name = "leta-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Leta library — call leta commands programmatically"
repository.workspace = true
homepage.workspace = true

[lib]
name = "leta_lib"
path = "src/lib.rs"

[dependencies]
leta-daemon = { workspace = true }
leta-types = { workspace = true }
leta-config = { workspace = true }
leta-cache = { workspace = true }
leta-output = { workspace = true }

tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
