[package]
name = "leta-output"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
leta-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
